--- a/_i18n_xliff/UnitedPizzaHelper Localizations/de.xcloc/Localized Contents/de.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/de.xcloc/Localized Contents/de.xliff
@@ -1502,7 +1502,10 @@ App-Symbol Illustrator, The Pizza Helper (v5)</target>
 - Dev, Pizza Helper for Blue Archive
 - Dev, The Pizza Helper (v5)
 - Public Relations (Overseas)</source>
-        <target state="translated">- Entwickler, Pizza Helfer für HSR - Entwickler, Pizza Helfer für Genshin (v1-v4) - Entwickler, Pizza Helfer für Blue Archive - Entwickler, Der Pizza Helfer (v5) - Öffentlichkeitsarbeit (Ausland)</target>
+        <target state="translated">- Entwickler, Pizza Helfer für HSR
+- Entwickler, Pizza Helfer für Genshin (v1-v4)
+- Entwickler, Pizza Helfer für Blue Archive - Entwickler, Der Pizza Helfer (v5)
+- Öffentlichkeitsarbeit (Ausland)</target>
         <note/>
       </trans-unit>
       <trans-unit id="aboutKit.contributor.subtitleAsMainCrew.lava" xml:space="preserve">
@@ -1522,7 +1525,9 @@ App-Symbol Illustrator, The Pizza Helper (v5)</target>
         <source>- Engine Architect &amp; Dev, The Pizza Helper (v5)
 - Maintainer, Pizza Helper for HSR
 - Maintainer, Pizza Helper for Genshin (v3-v4)</source>
-        <target state="translated">- Engine Architect &amp; Entwickler, Der Pizza-Helfer (v5) - Betreuer, Pizza-Helfer für HSR - Betreuer, Pizza-Helfer für Genshin (v3-v4)</target>
+        <target state="translated">- Engine Architect &amp; Entwickler, Der Pizza-Helfer (v5)
+- Betreuer, Pizza-Helfer für HSR
+- Betreuer, Pizza-Helfer für Genshin (v3-v4)</target>
         <note/>
       </trans-unit>
       <trans-unit id="aboutKit.contributors.category.assets" xml:space="preserve">
@@ -1554,6 +1559,11 @@ App-Symbol Illustrator, The Pizza Helper (v5)</target>
         <source>Art34222</source>
         <target state="translated">Art34222</target>
         <note>Localization Contributor (RU)</note>
+      </trans-unit>
+      <trans-unit id="aboutKit.contributors.name.escartem" xml:space="preserve">
+        <source>Escartem</source>
+        <target state="translated">Escartem</target>
+        <note>Localization Contributor (FR)</note>
       </trans-unit>
       <trans-unit id="aboutKit.contributors.name.hakubill" xml:space="preserve">
         <source>Haku Bill (水里的碳酸钙)</source>
@@ -1635,7 +1645,10 @@ App-Symbol Illustrator, The Pizza Helper (v5)</target>
 - The program part of this software is open-sourced under AGPLv3 License.
 - The Pizza Helper and its predecessors are not affiliated with miHoYo Co., Ltd. nor its subsidiaries.
 - The game contents and materials of the following titles are trademarks and copyrights of miHoYo Co., Ltd.: “Star Rail (HSR)”, “Genshin Impact”, “Zenless Zone Zero”.</source>
-        <target state="translated">- Der Nachfolger von PizzaHelper4Genshin und PizzaHelper4HSR. Angetrieben von der nächsten Generation der United Pizza Engine. - Der Programmbestandteil dieser Software ist unter der AGPLv3-Lizenz quelloffen. - Der Pizza Helper und seine Vorgänger stehen in keiner Verbindung zu miHoYo Co., Ltd. noch deren Tochtergesellschaften. - Die Spielinhalte und Materialien der folgenden Titel sind Marken und urheberrechtlich geschützt durch miHoYo Co., Ltd.: „Star Rail (HSR)“, „Genshin Impact“, „Zenless Zone Zero“.</target>
+        <target state="translated">- Der Nachfolger von PizzaHelper4Genshin und PizzaHelper4HSR. Angetrieben von der nächsten Generation der United Pizza Engine.
+- Der Programmbestandteil dieser Software ist unter der AGPLv3-Lizenz quelloffen.
+- Der Pizza Helper und seine Vorgänger stehen in keiner Verbindung zu miHoYo Co., Ltd. noch deren Tochtergesellschaften.
+- Die Spielinhalte und Materialien der folgenden Titel sind Marken und urheberrechtlich geschützt durch miHoYo Co., Ltd.: „Star Rail (HSR)“, „Genshin Impact“, „Zenless Zone Zero“.</target>
         <note/>
       </trans-unit>
       <trans-unit id="aboutKit.ourApps.pzHelper4BA" xml:space="preserve">
