--- a/_i18n_xliff/UnitedPizzaHelper Localizations/fr.xcloc/Localized Contents/fr.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/fr.xcloc/Localized Contents/fr.xliff
@@ -1502,16 +1502,16 @@ Illustrateur d'icônes de l'application, The Pizza Helper (v5)</target>
         <note/>
       </trans-unit>
       <trans-unit id="aboutKit.contributor.subtitleAsMainCrew.hakubill" xml:space="preserve">
-        <source>- Developpeur, Pizza Helper for HSR
+        <source>- Dev, Pizza Helper for HSR
 - Dev, Pizza Helper for Genshin (v1-v4)
 - Dev, Pizza Helper for Blue Archive
 - Dev, The Pizza Helper (v5)
 - Public Relations (Overseas)</source>
-        <target state="translated">- Développeur, Pizza Helper pour HSR
-- Développeur, Pizza Helper pour Genshin (v1-v4)
-- Développeur, Pizza Helper pour Blue Archive
-- Développeur, The Pizza Helper (v5)
-- Relations Publiques (Internationales)</target>
+        <target state="translated">- Développeur, Aide-Pizza pour HSR
+- Développeur, Aide-Pizza pour Genshin (v1-v4)
+- Développeur, Aide-Pizza pour Blue Archive
+- Développeur, L'Aide-Pizza (v5)
+- Relations Publiques (Internationale)</target>
         <note/>
       </trans-unit>
       <trans-unit id="aboutKit.contributor.subtitleAsMainCrew.lava" xml:space="preserve">
@@ -1532,8 +1532,8 @@ Illustrateur d'icônes de l'application, The Pizza Helper (v5)</target>
 - Maintainer, Pizza Helper for HSR
 - Maintainer, Pizza Helper for Genshin (v3-v4)</source>
         <target state="translated">- Conception et développement du moteur, The Pizza Helper (v5) 
-        - Responsable, Pizza Helper pour HSR 
-        - Responsable, Pizza Helper pour Genshin (v3-v4)</target>
+- Responsable, Pizza Helper pour HSR 
+- Responsable, Pizza Helper pour Genshin (v3-v4)</target>
         <note/>
       </trans-unit>
       <trans-unit id="aboutKit.contributors.category.assets" xml:space="preserve">
@@ -1565,6 +1565,11 @@ Illustrateur d'icônes de l'application, The Pizza Helper (v5)</target>
         <source>Art34222</source>
         <target state="translated">Art34222</target>
         <note>Localization Contributor (RU)</note>
+      </trans-unit>
+      <trans-unit id="aboutKit.contributors.name.escartem" xml:space="preserve">
+        <source>Escartem</source>
+        <target state="translated">Escartem</target>
+        <note>Localization Contributor (FR)</note>
       </trans-unit>
       <trans-unit id="aboutKit.contributors.name.hakubill" xml:space="preserve">
         <source>Haku Bill (水里的碳酸钙)</source>
@@ -1646,7 +1651,10 @@ Illustrateur d'icônes de l'application, The Pizza Helper (v5)</target>
 - The program part of this software is open-sourced under AGPLv3 License.
 - The Pizza Helper and its predecessors are not affiliated with miHoYo Co., Ltd. nor its subsidiaries.
 - The game contents and materials of the following titles are trademarks and copyrights of miHoYo Co., Ltd.: “Star Rail (HSR)”, “Genshin Impact”, “Zenless Zone Zero”.</source>
-        <target state="translated">- Le successeur de PizzaHelper4Genshin et de PizzaHelper4HSR. Fonctionnant via notre nouveau moteur Pizza Engine. - La partie logicielle de ce programme est en open source sous la licence AGPLv3. - The Pizza Helper et ses prédécesseurs ne sont pas affiliés à miHoYo Co., Ltd. ni à ses filiales. - Les contenus et matériaux des jeux suivants sont des marques déposées et des droits d'auteur de miHoYo Co., Ltd. : "Star Rail (HSR)", "Genshin Impact", "Zenless Zone Zero".</target>
+        <target state="translated">- Le successeur de PizzaHelper4Genshin et de PizzaHelper4HSR. Fonctionnant via notre nouveau moteur Pizza Engine.
+- La partie logicielle de ce programme est en open source sous la licence AGPLv3.
+- The Pizza Helper et ses prédécesseurs ne sont pas affiliés à miHoYo Co., Ltd. ni à ses filiales.
+- Les contenus et matériaux des jeux suivants sont des marques déposées et des droits d'auteur de miHoYo Co., Ltd. : "Star Rail (HSR)", "Genshin Impact", "Zenless Zone Zero".</target>
         <note/>
       </trans-unit>
       <trans-unit id="aboutKit.ourApps.pzHelper4BA" xml:space="preserve">
