--- a/_i18n_xliff/UnitedPizzaHelper Localizations/ru.xcloc/Localized Contents/ru.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/ru.xcloc/Localized Contents/ru.xliff
@@ -1514,14 +1514,20 @@ App Icon Illustrator, The Pizza Helper (v5)</source>
 - Dev, Pizza Helper for HSR
 - Dev, Pizza Helper for Genshin (v1-v4)
 - Public Relations (Mainland China)</source>
-        <target state="translated">- Лидер команды и основатель - Разработчик, The Pizza Helper (v5) - Разработчик, Pizza Helper для HSR - Разработчик, Pizza Helper для Genshin (v1-v4) - Связи с общественностью (Китай)</target>
+        <target state="translated">- Лидер команды и основатель
+- Разработчик, The Pizza Helper (v5)
+- Разработчик, Pizza Helper для HSR
+- Разработчик, Pizza Helper для Genshin (v1-v4)
+- Связи с общественностью (Китай)</target>
         <note/>
       </trans-unit>
       <trans-unit id="aboutKit.contributor.subtitleAsMainCrew.shikisuen" xml:space="preserve">
         <source>- Engine Architect &amp; Dev, The Pizza Helper (v5)
 - Maintainer, Pizza Helper for HSR
 - Maintainer, Pizza Helper for Genshin (v3-v4)</source>
-        <target state="translated">- Инженер-разработчик, Помощник пиццайоло (v5) - Ответственный за сопровождение, Помощник пиццайоло для HSR - Ответственный за сопровождение, Помощник пиццайоло для Genshin (v3-v4)</target>
+        <target state="translated">- Инженер-разработчик, Помощник пиццайоло (v5)
+- Ответственный за сопровождение, Помощник пиццайоло для HSR
+- Ответственный за сопровождение, Помощник пиццайоло для Genshin (v3-v4)</target>
         <note/>
       </trans-unit>
       <trans-unit id="aboutKit.contributors.category.assets" xml:space="preserve">
@@ -1553,6 +1559,11 @@ App Icon Illustrator, The Pizza Helper (v5)</source>
         <source>Art34222</source>
         <target state="translated">Art34222</target>
         <note>Localization Contributor (RU)</note>
+      </trans-unit>
+      <trans-unit id="aboutKit.contributors.name.escartem" xml:space="preserve">
+        <source>Escartem</source>
+        <target state="translated">Escartem</target>
+        <note>Localization Contributor (FR)</note>
       </trans-unit>
       <trans-unit id="aboutKit.contributors.name.hakubill" xml:space="preserve">
         <source>Haku Bill (水里的碳酸钙)</source>
