--- a/_i18n_xliff/UnitedPizzaHelper Localizations/zh-Hans.xcloc/Source Contents/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/zh-Hans.xcloc/Source Contents/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
@@ -180,7 +180,7 @@
       }
     },
     "app.dailynote.card.zzzHollowZeroBountyCommission.label" : {
-      "extractionState" : "stale",
+      "extractionState" : "manual",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -191,7 +191,7 @@
       }
     },
     "app.dailynote.card.zzzHollowZeroInvestigationPoint.label" : {
-      "extractionState" : "stale",
+      "extractionState" : "manual",
       "localizations" : {
         "en" : {
           "stringUnit" : {
