--- a/_i18n_xliff/UnitedPizzaHelper Localizations/zh-Hant.xcloc/Localized Contents/zh-Hant.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/zh-Hant.xcloc/Localized Contents/zh-Hant.xliff
@@ -1571,6 +1571,11 @@ App 圖示繪師 (統一披薩小助手 v5)</target>
         <target state="translated">Art34222</target>
         <note>Localization Contributor (RU)</note>
       </trans-unit>
+      <trans-unit id="aboutKit.contributors.name.escartem" xml:space="preserve">
+        <source>Escartem</source>
+        <target state="translated">Escartem</target>
+        <note>Localization Contributor (FR)</note>
+      </trans-unit>
       <trans-unit id="aboutKit.contributors.name.hakubill" xml:space="preserve">
         <source>Haku Bill (水里的碳酸钙)</source>
         <target state="translated">水裡的碳酸鈣 (Haku Bill)</target>
