--- a/_i18n_xliff/UnitedPizzaHelper Localizations/zh-Hant.xcloc/Source Contents/Packages/PZAboutKit/Sources/PZAboutKit/Resources/Localizable.xcstrings
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/zh-Hant.xcloc/Source Contents/Packages/PZAboutKit/Sources/PZAboutKit/Resources/Localizable.xcstrings
@@ -458,6 +458,18 @@
         }
       }
     },
+    "aboutKit.contributors.name.escartem" : {
+      "comment" : "Localization Contributor (FR)",
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Escartem"
+          }
+        }
+      }
+    },
     "aboutKit.contributors.name.hakubill" : {
       "comment" : "Crew Member",
       "localizations" : {
